# sideways-otel

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  publish.yml
examples/: basic.rs  custom_subscriber.rs  vendor_backend.rs
src/: lib.rs  metrics.rs  prelude.rs  propagation.rs  resource.rs  span.rs  tracing.rs
